Fix spacing

--- a/stylesheets/education.css
+++ b/stylesheets/education.css
@@ -3,6 +3,7 @@ img {
   display: block;
   height: 350px;
   width: 700px;
+  margin-left: 200px;
 }
 
 * {
